--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@syncfusion/ej2-base": "*",
-    "@syncfusion/ej2-react-schedule": "*",
-    "axios": "^0.21.1",
-    "react": "17.0.0",
-    "react-dom": "17.0.0"
+    "@syncfusion/ej2-base": "^28.1.48",
+    "@syncfusion/ej2-react-schedule": "^28.1.48",
+    "axios": "^1.7.9",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,6 +16,18 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "react-scripts": "latest"
+    "react-scripts": "^5.0.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
